[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.19"
etagere = "0.2.10"
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", rev = "1b025ae" }
lru = "0.12.1"

[dev-dependencies]
winit = { version = "0.29.10", features = ["rwh_05"] }
pollster = "0.3.0"
