[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
# Newer wgpu commit that fixes Vulkan backend on Nvidia
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "20fda69" }
etagere = "0.2.10"
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git" }
lru = "0.12.1"

[dev-dependencies]
winit = { version = "0.29.10", features = ["rwh_05"] }
pollster = "0.3.0"
